fix overflow problem

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -88,6 +88,14 @@ Dimension classes
 
   & + div {
     padding-top: spacing(32);
+
+    &.move-drip-padding-to-child-element {
+      padding-top: 0;
+
+      > div {
+        padding-top: spacing(32);
+      }
+    }
   }
 }
 
